<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Butterfly_Blue"
        tools:context=".DisplayWeatherActivity">


        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_margin="16dp"
                app:layout_constraintVertical_bias="0.273"
                android:elevation="2dp"
                app:cardMaxElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="36sp"
                        android:text="City Name"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:fontFamily="sans-serif-condensed-light"
                        android:gravity="center"
                        android:id="@+id/cardCityName"/>

                <com.beardedhen.androidbootstrap.BootstrapLabel
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/cardCityName"
                        app:bootstrapBrand="primary"
                        android:layout_marginTop="15dp"
                        app:roundedCorners="true"
                        app:bootstrapHeading="h3"
                        android:text="WEATHER"
                        android:id="@+id/cardWeatherLabel"

                />

                <com.github.pwittchen.weathericonview.WeatherIconView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cardWeatherLabel"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:id="@+id/cardWeatherIcon"
                        app:weatherIconSize="75"
                        app:weatherIconResource="@string/wi_owm_day_501"
                />

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cardWeatherIcon"
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="#000"
                        android:id="@+id/infoCard"
                        app:cardCornerRadius="5dp"
                        app:contentPadding="1dp"
                >
                    <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                    >

                        <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:weightSum="100">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/temp"
                                    android:textSize="24sp"
                                    android:fontFamily="sans-serif-smallcaps"
                                    android:textStyle="bold"
                                    android:textColor="#000"
                                    android:gravity="center_horizontal"
                                    android:layout_weight="50"
                            />
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Temprature"
                                    android:id="@+id/cardTempValue"
                                    android:textSize="23sp"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center_horizontal"
                                    android:textColor="#000"
                                    android:layout_weight="50"
                            />

                        </TableRow>
                        <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:weightSum="100">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/pressure"
                                    android:textSize="24sp"
                                    android:fontFamily="sans-serif-smallcaps"
                                    android:textStyle="bold"
                                    android:textColor="#000"
                                    android:gravity="center_horizontal"
                                    android:layout_weight="50"
                            />
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Pressure"
                                    android:textSize="23sp"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center_horizontal"
                                    android:textColor="#000"
                                    android:id="@+id/cardPressureValue"
                                    android:layout_weight="50"
                            />

                        </TableRow>
                        <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:weightSum="100">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/Humidity"
                                    android:textSize="24sp"
                                    android:fontFamily="sans-serif-smallcaps"
                                    android:textStyle="bold"
                                    android:textColor="#000"
                                    android:gravity="center_horizontal"
                                    android:layout_weight="50"
                            />
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Humidity"
                                    android:textSize="23sp"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center_horizontal"
                                    android:id="@+id/cardHumidityValue"
                                    android:textColor="#000"
                                    android:layout_weight="50"
                            />

                        </TableRow>
                        <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:weightSum="100">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/Wind"
                                    android:textSize="24sp"
                                    android:fontFamily="sans-serif-smallcaps"
                                    android:textStyle="bold"
                                    android:textColor="#000"
                                    android:gravity="center_horizontal"
                                    android:layout_weight="50"
                            />
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Wind"
                                    android:textSize="23sp"
                                    android:id="@+id/cardWindValue"
                                    android:fontFamily="sans-serif-condensed"
                                    android:gravity="center_horizontal"
                                    android:textColor="#000"
                                    android:layout_weight="50"
                            />

                        </TableRow>
                    </TableLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/infoCard"
                        android:weightSum="100"
                        android:padding="7dp"
                        android:orientation="horizontal"
                        android:layout_margin="5dp">

                    <com.beardedhen.androidbootstrap.BootstrapButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Toggle Temprature"
                            android:layout_weight="50"
                            android:layout_marginEnd="3dp"
                            android:layout_marginStart="3dp"
                            app:bootstrapSize="lg"
                            app:buttonMode="regular"
                            app:showOutline="true"
                            app:bootstrapBrand="success"
                            android:id="@+id/btnToggleTemprature"
                            android:onClick="toggleTempClick"
                            android:gravity="center_horizontal"
                            app:roundedCorners="true"
                    />

                    <com.beardedhen.androidbootstrap.BootstrapButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Reset Weather"
                            android:layout_weight="50"
                            app:bootstrapSize="lg"
                            app:buttonMode="regular"
                            android:id="@+id/btnResetWeather"
                            android:layout_marginEnd="3dp"
                            android:layout_marginStart="3dp"
                            android:onClick="resetWeatherClick"
                            app:showOutline="true"
                            app:bootstrapBrand="danger"
                            android:gravity="center_horizontal"
                            app:roundedCorners="true"
                    />


                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>





    <com.beardedhen.androidbootstrap.BootstrapLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_by"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:bootstrapBrand="secondary"
            app:roundedCorners="true"
            android:layout_marginBottom="16dp"
            android:textStyle="normal"
            app:bootstrapHeading="h6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/bootstrapLabel"/>


</androidx.constraintlayout.widget.ConstraintLayout>